--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,18 @@
     <title>Apple</title>
     <link rel="stylesheet" href="./build/tailwind.css" />
   </head>
-  <body class="min-w-320px">
-    <nav id="nav" class="bg-apple-gray sm:h-12 sm:bg-apple-gray md:h-23/2 md:px-3 text-sm antialiased">
+  <body class="min-w-320px h-screen sm:bg-white">
+    <nav
+      id="nav"
+      class="text-md bg-apple-gray antialiased sm:text-sm sm:h-12 sm:bg-apple-gray md:h-23/2 md:px-3"
+    >
       <div
-        class="flex items-center justify-between h-full sm:max-w-1000px sm:pb-1 mx-auto"
+        id="nav-container"
+        class="flex flex-wrap items-center justify-between h-full sm:max-w-1000px sm:pb-1 sm:mx-auto"
       >
         <div
           id="hamburger"
-          class="relative h-23/2 w-23/2 mb-1 sm:hidden cursor-pointer"
+          class="relative h-23/2 w-23/2 mb-1 cursor-pointer sm:hidden"
         >
           <span class="absolute h-full w-full hamburger-top-wrapper">
             <span class="bar hamburger-top"></span>
@@ -23,7 +27,7 @@
           </span>
         </div>
         <svg
-          class="inline-block mb-1 h-23/2 w-23/2 sm:mb-0 sm:h-10 sm:w-10 fill-current text-gray-300 hover:text-white cursor-pointer"
+          class="inline-block h-23/2 w-23/2 mb-1 fill-current text-gray-300 hover:text-white cursor-pointer sm:mb-0 sm:h-10 sm:w-10"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 15 40"
         >
@@ -32,59 +36,74 @@
             d="M8.02 16.23c-.73 0-1.86-.83-3.05-.8-1.57.02-3.01.91-3.82 2.32-1.63 2.83-.42 7.01 1.17 9.31.78 1.12 1.7 2.38 2.92 2.34 1.17-.05 1.61-.76 3.03-.76 1.41 0 1.81.76 3.05.73 1.26-.02 2.06-1.14 2.83-2.27.89-1.3 1.26-2.56 1.28-2.63-.03-.01-2.45-.94-2.48-3.74-.02-2.34 1.91-3.46 2-3.51-1.1-1.61-2.79-1.79-3.38-1.83-1.54-.12-2.83.84-3.55.84zm2.6-2.36c.65-.78 1.08-1.87.96-2.95-.93.04-2.05.62-2.72 1.4-.6.69-1.12 1.8-.98 2.86 1.03.08 2.09-.53 2.74-1.31"
           />
         </svg>
-        <div class="w-7/10 hidden sm:flex sm:justify-between sm:py-1/2">
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block text-gray-300 h-full hover:text-white"
-              >Mac</a
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 15 40"
+          id="bag"
+          class="inline-block h-10 w-10 mb-1 mr-1 fill-current text-gray-300 hover:text-white cursor-pointer sm:hidden"
+        >
+          <g>
+            <path
+              d="M14.5,14H12.712a4.227,4.227,0,0,0-8.424,0H2.5A2.5,2.5,0,0,0,0,16.5v11A2.5,2.5,0,0,0,2.5,30h12A2.5,2.5,0,0,0,17,27.5v-11A2.5,2.5,0,0,0,14.5,14Zm-6-2.875A3.243,3.243,0,0,1,11.712,14H5.288A3.243,3.243,0,0,1,8.5,11.125ZM16,27.5A1.5,1.5,0,0,1,14.5,29H2.5A1.5,1.5,0,0,1,1,27.5v-11A1.5,1.5,0,0,1,2.5,15h12A1.5,1.5,0,0,1,16,16.5Z"
+            />
+          </g>
+        </svg>
+        <div
+          id="search-bar"
+          class="hidden h-13 w-full border-b-1/2 border-apple-gray-light border-opacity-50 sm:hidden"
+        >
+          <div
+            class="flex align-items-center w-14/15 mx-auto bg-apple-gray-dark py-1/2 rounded-lg cursor-pointer"
+          >
+            <svg
+              class="inline-block h-8 w-8 fill-current text-apple-gray-light"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 45"
             >
+              <g>
+                <path
+                  d="M17.512,29.417l-4.786-4.788a7.068,7.068,0,1,0-.777.778l4.785,4.788a.55.55,0,1,0,.777-.777ZM1.427,20.054a5.946,5.946,0,1,1,5.946,5.954A5.957,5.957,0,0,1,1.427,20.054Z"
+                />
+              </g>
+            </svg>
+            <input
+              type="text"
+              class="bg-apple-gray-dark placeholder-apple-gray-light text-white font-normal outline-none"
+              name="search"
+              placeholder="Search apple.com"
+              id="search"
+            />
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >iPad</a
-            >
+          <br />
+        </div>
+        <div
+          id="nav-links"
+          class="hidden flex-col w-8/10 mt-1 mx-auto text-gray-300 leading-11 divide-y divide-apple-gray-light divide-opacity-50 sm:flex sm:flex-row sm:justify-between sm:w-7/10 sm:py-1/2 sm:m-0 sm:text-sm sm:leading-normal sm:divide-y-0"
+        >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">Mac</a>
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >iPhone</a
-            >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">iPad</a>
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >Watch</a
-            >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">iPhone</a>
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >TV</a
-            >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">Watch</a>
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >Music</a
-            >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">TV</a>
           </div>
-          <div class="h-full hidden sm:block">
-            <a
-              href="#"
-              class="inline-block h-full text-gray-300 hover:text-white"
-              >Support</a
-            >
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">Music</a>
+          </div>
+          <div class="h-full sm:block">
+            <a href="#" class="inline-block h-full hover:text-white">Support</a>
           </div>
         </div>
         <svg
-          class="hidden sm:inline-block h-10 w-10 fill-current text-gray-300 hover:text-white cursor-pointer"
+          class="hidden h-10 w-10 fill-current text-gray-300 hover:text-white cursor-pointer sm:inline-block"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 15 40"
         >
@@ -98,7 +117,7 @@
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 15 40"
           id="bag"
-          class="inline-block sm:visible sm:-ml-3 mb-1 mr-1 h-10 w-10 sm:mb-0 sm:mr-0 fill-current text-gray-300 hover:text-white cursor-pointer"
+          class="hidden -ml-3 h-10 w-10 fill-current text-gray-300 hover:text-white cursor-pointer sm:block"
         >
           <g>
             <path
@@ -106,83 +125,6 @@
             />
           </g>
         </svg>
-      </div>
-      <div id="menu-expanded" class="hidden h-90vh bg-black sm:hidden">
-        <div class="block sm:hidden h-13 border-b-1/2 border-apple-gray-light border-opacity-50">
-          <div class="flex align-items-center w-14/15 mx-auto bg-apple-gray-dark py-1/2 rounded-lg cursor-pointer"">
-            <svg
-            class="inline-block h-8 w-8 fill-current text-apple-gray-light"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 45"
-          >
-            <g>
-              <path
-                d="M17.512,29.417l-4.786-4.788a7.068,7.068,0,1,0-.777.778l4.785,4.788a.55.55,0,1,0,.777-.777ZM1.427,20.054a5.946,5.946,0,1,1,5.946,5.954A5.957,5.957,0,0,1,1.427,20.054Z"
-              />
-            </g>
-          </svg>
-          <input
-            type="text"
-            class="bg-apple-gray-dark placeholder-apple-gray-light text-white text-md font-normal outline-none"
-            name="search"
-            placeholder="Search apple.com"
-            id="search"
-          />
-          </div>
-          <br>
-        </div>
-
-        <div class="block w-8/10 sm:hidden mx-auto mt-1 divide-y divide-apple-gray-light divide-opacity-50 text-md text-gray-300">
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block leading-11 text-gray-300 h-full hover:text-white"
-              >Mac</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >iPad</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >iPhone</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >Watch</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >TV</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >Music</a
-            >
-          </div>
-          <div class="block">
-            <a
-              href="#"
-              class="inline-block h-full leading-11 text-gray-300 hover:text-white"
-              >Support</a
-            >
-          </div>
-        </div>
       </div>
     </nav>
   </body>
